<resources>
    <string name="app_name">GameFit</string>
    <string name="ob_title_01">Aktivitas fisik untuk jaga kesehatan</string>
    <string name="ob_title_02">Workout di mana pun kapan pun</string>
    <string name="ob_title_03">Selesaikan setiap tantangannya</string>
    <string name="ob_desc_01">Gunakan GameFit untuk menjaga kesehatan fisik kamu</string>
    <string name="ob_desc_02">Lakukan workout di mana pun kamu berada bersama GameFit</string>
    <string name="ob_desc_03">Dapatkan reward berupa voucher game setelah menyelesaikan tantangan</string>

    <string name="login_title">Welcome Back!</string>
    <string name="login_desc">Ayo kembali produktif dan jadilah yang terbaik!</string>

    <string name="register_title">Welcome to GameFit!</string>
    <string name="register_desc">Ayo bergabung bersama kami dan jadilah yang terbaik!</string>

    <string name="dialog_reset_password_desc">Masukkan email Anda untuk menerima link reset password</string>

    <string name="edittext_hint_email"><font size="13">Email</font></string>
    <string name="edittext_hint_password"><font size="13">Password</font></string>
    <string name="edittext_hint_fullname"><font size="13">Full Name</font></string>
    <string name="edittext_hint_phone"><font size="13">Phone Number</font></string>

    <string name="search_hint"><font size="13">Cari aktivitas lain ...</font></string>

    <string name="start_label">Start</string>
    <string name="stop_label">Stop</string>
    <string name="distance_value">%d</string>
    <string name="speed_value">%d</string>

    <!--  API key for google maps  -->
    <string name="google_maps_key">AIzaSyDoFpx1zS6F2BrPV3TQfVSP9nOFmRjJR-8</string>

    <string name="reward_desc">Anda mendapatkan 1000 diamonds!</string>
    <string name="reward_qoutes">“Pencapaianmu dalam berolahraga sungguh luar biasa! Teruslah berjuang dan taklukkan setiap tantangan!”</string>
    />

</resources>