<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:scrollbars="none"
    tools:context=".login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_dark" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:src="@drawable/img_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/register_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/white_60"
            android:text="@string/register_desc" />

        <EditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_fullname"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_phone"
            android:inputType="phone"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/edittext_hint_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:layout_marginHorizontal="16dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:backgroundTint="@null"
            android:background="@drawable/bg_btn_primary"
            android:text="Daftar"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white_60"
            android:textSize="14sp"
            android:text="Sudah memiliki akun? Masuk"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="invisible" />

    </LinearLayout>



</ScrollView>